src/main/java/com/example/Rental/Errors/CategoryNotFoundException.java
package com.example.Rental.Errors;


public class CategoryNotFoundException extends RuntimeException {
    public CategoryNotFoundException(Long categoryId) {
        super("Category not found with ID: " + categoryId);
    }
}
